--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required (VERSION 2.8)
-
 project (QuantColor)
-
 add_subdirectory(heap)
 
 add_subdirectory(src)
 
-add_subdirectory(test)
+# add_subdirectory(test)
