--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ environment:
 matrix:
   fast_finish: true
 install: 
-    - ps: Install-Product node 11.14
+    # - ps: Install-Product node 11.14
     - node: --vrsion
 init:
 - set arch=
