--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ matrix:
   fast_finish: true
 install: 
     - ps: node --version
-    - ps: git submodule update --init heap
+    - ps: git submodule -q update --init heap
 init:
 - set arch=
 - if "%arch%"=="Win64" ( set arch= Win64)
