--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,7 @@ init:
 - if "%APPVEYOR_BUILD_WORKER_IMAGE%"=="Visual Studio 2017" ( set generator="Visual Studio 15 2017%arch%" )
 - echo %generator%
 before_build:
-- ps: |-
+- cmd: |-
       cd build
       cmake --version
       cmake .. -G %generator%
@@ -32,7 +32,7 @@ build:
   parallel: true
 
 test_script:
-- ps: |-
+- cmd: |-
     cd test
     .\Debug\TestQC.exe
     .\Release\TestQC.exe
