--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,13 +10,12 @@ execute_process(COMMAND powershell -c "node index.js"
 if(EXISTS "${CMAKE_SOURCE_DIR}/js/data.3.rgb")
   configure_file(${CMAKE_SOURCE_DIR}/js/data.3.rgb ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 endif()
-if(EXISTS "${CMAKE_SOURCE_DIR}/js/data.3.rgb")
+if(EXISTS "${CMAKE_SOURCE_DIR}/js/data.4.rgb")
   configure_file(${CMAKE_SOURCE_DIR}/js/data.4.rgb ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
 endif()
-if(EXISTS "${CMAKE_SOURCE_DIR}/js/data.3.rgb")
-  configure_file(${CMAKE_SOURCE_DIR}/js/small.3.rgb ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
-
-endif()
+# if(EXISTS "${CMAKE_SOURCE_DIR}/js/small.3.rgb")
+#   configure_file(${CMAKE_SOURCE_DIR}/js/small.3.rgb ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
+# endif()
 add_executable(TestQC main.c)
 include_directories(../src)
 include_directories(../heap/src)
