--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,17 +1,21 @@
-message("installing node deps")
-execute_process(COMMAND powershell -c "npm install"
-WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/js
-)
-
-message("Generating Binary Test file")
 if (WIN32)
-execute_process(COMMAND powershell -c "node index.js"
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/script
-                )
+    message("installing node deps")
+    execute_process(COMMAND powershell -c "npm install"
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/script
+    )
+    message("Generating Binary Test file")
+    execute_process(COMMAND powershell -c "node index.js"
+                    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/script
+                    )
 else()
-execute_process(COMMAND bash -c "node index.js"
-                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/script
-                )    
+    message("installing node deps")
+    execute_process(COMMAND bash -c "npm install"
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/script
+    )
+    message("Generating Binary Test file")
+    execute_process(COMMAND bash -c "node index.js"
+                    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/script
+                    )
 endif ()
 add_executable(TestQC main.c)
 include_directories(../src)
