--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required (VERSION 2.8)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CXX_STANDARD 17)
 project (QuantColor)
-add_subdirectory(heap)
-
 add_subdirectory(src)
 
-# add_subdirectory(test)
+add_subdirectory(test)
 
